2007-04-17	Joel Sherrill <joel@OARcorp.com>

	* erc32/tools/runtest.in, leon2/tools/runtest.in,
	leon3/tools/runtest.in: Do not run pppd.exe from batch mode script.

2007-03-11	Joel Sherrill <joel@OARcorp.com>

	* shared/bspstart.c: Remove assignments of
	Cpu_table.do_zero_of_workspace to TRUE since TRUE is the default
	value in boot_card.c

2006-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: New BUG-REPORT address.

2006-11-16	Joel Sherrill <joel@OARcorp.com>

	* shared/bspstart.c, shared/start.S: Use common clock driver template
	and eliminate all fast idle code specific to this BSP. This
	eliminates a fair amount of code in the BSP clock driver and
	bsp_startup. The LEON3 has to do a scan of the AMBA bus to find the
	timer so I added the new hook Clock_driver_support_find_timer to
	support this. In general, there was some clean up to the file headers
	of various files.

2006-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.60. Require automake-1.10.

2006-01-10	Joel Sherrill <joel@OARcorp.com>

	* shared/start.S: Add include of bspopts.h so SIS quirks will trigger.

2006-01-09	Ralf Corsepius <ralf.corsepius@rtems.org>

	* shared/start.S: Backport from rtems-4-6-branch.

2005-10-16	Ralf Corsepius <ralf.corsepius@rtems.org>

	* Makefile.am: Merge-in shared/Makefile.am.
	* ChangeLog: Merge-in shared/ChangeLog.
	* configure.ac: Remove shared/Makefile.am.

2005-09-02	Joel Sherrill <joel@OARcorp.com>

	PR 821/bsps
	* shared/start.S: Workaround -- just avoid copying non-existent
	initialized data in ROM to RAM.

2004-09-24	Ralf Corsepius <ralf.corsepius@rtems.org>

	* configure.ac: Require automake > 1.9.

2004-04-01	Ralf Corsepius <ralf.corsepius@rtems.org>

	* shared/start.S: Include <rtems/asm.h> instead of <asm.h>.

2004-03-31	Ralf Corsepius <ralf.corsepius@rtems.org>

	* shared/bspstart.c, shared/gnatcommon.c: Convert to using c99 fixed
	size types.

2004-02-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
