@@ -112,7 +112,7 @@ void bsp_start( void )
     (unsigned char *)rdb_start - BSP_Configuration.work_space_size;
 
   if ( work_space_start <= (unsigned char *)&end ) {
-    DEBUG_puts( "bspstart: Not enough RAM!!!\n" );
+    printk( "bspstart: Not enough RAM!!!\n" );
     BSP_fatal_return();
   }
 
